[gd_scene load_steps=28 format=2]

[ext_resource path="res://actors/player/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://actors/camera/ShakingCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/hit_box/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/player/PlayerStateMachine.gd" type="Script" id=4]
[ext_resource path="res://actors/player/states/motion/on_ground/Idle.gd" type="Script" id=5]
[ext_resource path="res://actors/player/states/motion/on_ground/Move.gd" type="Script" id=6]
[ext_resource path="res://actors/player/states/motion/in_air/Jump.gd" type="Script" id=7]
[ext_resource path="res://actors/player/states/combat/Stagger.gd" type="Script" id=8]
[ext_resource path="res://actors/player/states/combat/Attack.gd" type="Script" id=9]
[ext_resource path="res://actors/player/states/Die.gd" type="Script" id=10]
[ext_resource path="res://actors/player/shadow.png" type="Texture" id=11]
[ext_resource path="res://actors/player/body.png" type="Texture" id=12]
[ext_resource path="res://interface/fonts/SourceCodePro-Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://actors/player/states/debug/StateNameDisplayer.gd" type="Script" id=14]
[ext_resource path="res://actors/weapons/sword/WeaponPivot.gd" type="Script" id=15]
[ext_resource path="res://actors/weapons/sword/Sword.tscn" type="PackedScene" id=16]
[ext_resource path="res://actors/health/Stats.tscn" type="PackedScene" id=17]
[ext_resource path="res://inventory/Inventory.tscn" type="PackedScene" id=18]
[ext_resource path="res://inventory/items/usable/potions/restore_health/MinorHealthPotion.tscn" type="PackedScene" id=19]
[ext_resource path="res://inventory/items/usable/potions/restore_health/StrongHealthPotion.tscn" type="PackedScene" id=20]
[ext_resource path="res://actors/weapons/bullet/BulletSpawner.gd" type="Script" id=21]
[ext_resource path="res://audio/sfx/step_01.wav" type="AudioStream" id=22]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 31.3139

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1

[sub_resource type="DynamicFont" id=5]

size = 20
use_mipmaps = false
use_filter = true
font_data = ExtResource( 13 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ShakingCamera" parent="." index="0" instance=ExtResource( 2 )]

[node name="HitBox" parent="." index="1" instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]

shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="." index="2"]

editor/display_folded = true
script = ExtResource( 4 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]

script = ExtResource( 5 )

[node name="Move" type="Node" parent="StateMachine" index="1"]

script = ExtResource( 6 )
MAX_WALK_SPEED = 450
MAX_RUN_SPEED = 700

[node name="Jump" type="Node" parent="StateMachine" index="2"]

script = ExtResource( 7 )
BASE_MAX_HORIZONTAL_SPEED = 400.0
AIR_ACCELERATION = 1000.0
AIR_DECCELERATION = 2000.0
AIR_STEERING_POWER = 50.0
JUMP_HEIGHT = 120.0
JUMP_DURATION = 0.8
GRAVITY = 1600.0

[node name="Stagger" type="Node" parent="StateMachine" index="3"]

script = ExtResource( 8 )

[node name="Attack" type="Node" parent="StateMachine" index="4"]

script = ExtResource( 9 )

[node name="Die" type="Node" parent="StateMachine" index="5"]

script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
anims/stagger = SubResource( 3 )
anims/walk = SubResource( 4 )
blend_times = [  ]

[node name="Shadow" type="Sprite" parent="." index="4"]

self_modulate = Color( 1, 1, 1, 0.361098 )
position = Vector2( 0, -4 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Visibility" ]

[node name="BodyPivot" type="Position2D" parent="." index="5"]

editor/display_folded = true

[node name="Body" type="Sprite" parent="BodyPivot" index="0"]

position = Vector2( 0, -58.8242 )
texture = ExtResource( 12 )

[node name="StateNameDisplayer" type="Label" parent="BodyPivot" index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -109.0
margin_top = -172.0
margin_right = 110.0
margin_bottom = -138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Test"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 14 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WeaponPivot" type="Position2D" parent="." index="6"]

position = Vector2( 1.17401, -61.266 )
script = ExtResource( 15 )

[node name="Offset" type="Position2D" parent="WeaponPivot" index="0"]

position = Vector2( 110, 0 )

[node name="Sword" parent="WeaponPivot/Offset" index="0" instance=ExtResource( 16 )]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="7"]

build_mode = 0
polygon = PoolVector2Array( -20, 0, -20, -20, 20, -20, 20, 0 )

[node name="Health" parent="." index="8" instance=ExtResource( 17 )]

[node name="Inventory" parent="." index="9" instance=ExtResource( 18 )]

[node name="MinorHealthPotion" parent="Inventory" index="0" instance=ExtResource( 19 )]

amount = 4

[node name="StrongHealthPotion" parent="Inventory" index="1" instance=ExtResource( 20 )]

[node name="BulletSpawn" type="Node2D" parent="." index="10"]

editor/display_folded = true
position = Vector2( 1.17401, -61.266 )
script = ExtResource( 21 )
_sections_unfolded = [ "Transform" ]

[node name="CooldownTimer" type="Timer" parent="BulletSpawn" index="0"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 22 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="state_changed" from="StateMachine" to="BodyPivot/StateNameDisplayer" method="_on_StateMachine_state_changed"]

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]

[connection signal="attack_finished" from="WeaponPivot/Offset/Sword" to="StateMachine/Attack" method="_on_Sword_attack_finished"]

[connection signal="damage_taken" from="Health" to="StateMachine" method="_on_Health_damage_taken"]


[editable path="HitBox"]
